//指定protobuf语法版本
syntax = "proto3";

//包名
option java_package = "com.ghj.chat.protocol";
//源文件类名
option java_outer_classname = "AckMessageProto";

// class Person
message AckMessage {

    int64 id = 1;

    int32 code = 2;

    string content = 3;

    int64 matchMessageId = 4;

    int32 toUserId = 5;

    int32 fromUserId = 6;

    int32 associatedGroupId = 7;

    MessageDirect messageDirect = 8;

    int32 machineSerialNumber = 9;

    enum MessageDirect {
        PERSONAL = 0;
        GROUP = 1;
        SERVER = 2;
    }

}
