//指定protobuf语法版本
syntax = "proto3";

//包名
option java_package = "com.ghj.chat.protocol";
//源文件类名
option java_outer_classname = "RequestMessageProto";

// class Person
message RequestMessage {

  int64 id = 1;

  string loginName = 2;

  string nickName = 3;
  //int32 对应java中的int
  int32 fromUserId = 4;
  //optional 可以为空
  int32 toUserId = 5;

  int32 toGroupId = 6;

  int32 messageTypeId = 7;

  string content = 8;

  string token = 9;

  ClientBehavior clientBehavior = 10;

  MessageDirect messageDirect = 11;

  int64 deviceId = 12;


  enum ClientBehavior {
    LOGIN = 0;
    PING = 1;
    MESSAGE = 2;
    LOGIN_OUT = 3;
  }

  enum MessageDirect {
    PERSONAL = 0;
    GROUP = 1;
    SERVER = 2;
  }

}
