//指定protobuf语法版本
syntax = "proto3";

//包名
option java_package = "com.ghj.protocol";
//源文件类名
option java_outer_classname = "RegisterMessageProto";

// class Person
message RegisterMessage {

    string ip = 1;

    int64 machineSerialNumber = 2;

    int32 port = 3;

    enum ClientBehavior {
        REGISTER = 0;
    }

    enum MessageDirect {
        REGISTRY = 0;
    }
}
